--- a/GUI/XIB files/Configuration.xib
+++ b/GUI/XIB files/Configuration.xib
@@ -126,7 +126,7 @@ Gw
 </string>
                                             </buttonCell>
                                             <connections>
-                                                <action selector="romDefaultsAction:" target="-2" id="NeD-fL-eyM"/>
+                                                <action selector="cartDefaultsAction:" target="-2" id="NeD-fL-eyM"/>
                                             </connections>
                                         </button>
                                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7kO-E0-VCD">
@@ -149,7 +149,7 @@ Gw
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         </box>
                                         <box verticalHuggingPriority="750" fixedFrame="YES" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="vQY-cY-PdH">
-                                            <rect key="frame" x="240" y="363" width="351" height="5"/>
+                                            <rect key="frame" x="240" y="349" width="351" height="5"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         </box>
                                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sYt-GY-XZQ">
@@ -169,7 +169,7 @@ DQ
                                         <popUpButton fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lEM-1c-dUJ" userLabel="System">
                                             <rect key="frame" x="6" y="13" width="128" height="26"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <popUpButtonCell key="cell" type="push" title="Revert to..." bezelStyle="rounded" imagePosition="right" alignment="left" lineBreakMode="truncatingTail" borderStyle="border" imageScaling="proportionallyDown" inset="2" pullsDown="YES" selectedItem="pzX-tg-kj6" id="iwU-eY-ZPD" userLabel="System">
+                                            <popUpButtonCell key="cell" type="push" title="Revert to..." bezelStyle="rounded" imagePosition="right" alignment="left" lineBreakMode="truncatingTail" borderStyle="border" imageScaling="proportionallyDown" inset="2" pullsDown="YES" id="iwU-eY-ZPD" userLabel="System">
                                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                 <font key="font" metaFont="menu"/>
                                                 <menu key="menu" title="Restore" id="BLu-fh-z2g">
@@ -177,26 +177,18 @@ DQ
                                                         <menuItem title="Revert to..." hidden="YES" id="pzX-tg-kj6">
                                                             <attributedString key="attributedTitle"/>
                                                         </menuItem>
-                                                        <menuItem title="C64 (PAL)" id="ez1-iW-7Rm">
+                                                        <menuItem title="Standard settings" id="ez1-iW-7Rm">
                                                             <attributedString key="attributedTitle"/>
-                                                        </menuItem>
-                                                        <menuItem title="C64 II (PAL)" tag="1" id="f4E-ML-4lu"/>
-                                                        <menuItem title="Early C64 (PAL)" tag="2" id="daj-oc-ga1"/>
-                                                        <menuItem isSeparatorItem="YES" tag="-1" id="CRJ-yh-LXh"/>
-                                                        <menuItem title="C64 (NTSC)" tag="3" id="MWf-SE-ZIh"/>
-                                                        <menuItem title="C64 II (NTSC)" tag="4" id="aEv-J1-cqt"/>
-                                                        <menuItem title="Early C64 (NTSC)" tag="5" id="4jE-xh-syb">
-                                                            <modifierMask key="keyEquivalentModifierMask"/>
                                                         </menuItem>
                                                     </items>
                                                 </menu>
                                             </popUpButtonCell>
                                             <connections>
-                                                <action selector="hwPresetAction:" target="-2" id="FX7-TN-Y2k"/>
+                                                <action selector="cartRevertTypeAction:" target="-2" id="537-AY-H1k"/>
                                             </connections>
                                         </popUpButton>
                                         <box fixedFrame="YES" borderType="line" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="6tf-5c-i12">
-                                            <rect key="frame" x="6" y="128" width="223" height="259"/>
+                                            <rect key="frame" x="6" y="114" width="223" height="259"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                             <view key="contentView" id="fLj-GD-6Pn">
                                                 <rect key="frame" x="4" y="5" width="215" height="251"/>
@@ -214,7 +206,7 @@ DQ
                                             </view>
                                         </box>
                                         <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pea-uJ-4G8">
-                                            <rect key="frame" x="238" y="342" width="354" height="17"/>
+                                            <rect key="frame" x="238" y="328" width="354" height="17"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" controlSize="small" selectable="YES" alignment="left" title="Ipsum lorem" id="dRj-0k-phn">
                                                 <font key="font" metaFont="message" size="11"/>
@@ -223,7 +215,7 @@ DQ
                                             </textFieldCell>
                                         </textField>
                                         <textField focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pJq-X4-x2y">
-                                            <rect key="frame" x="238" y="324" width="354" height="18"/>
+                                            <rect key="frame" x="238" y="310" width="354" height="18"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" controlSize="small" selectable="YES" sendsActionOnEndEditing="YES" alignment="left" title="Ipsum lorem" id="V0T-0g-SdF">
                                                 <font key="font" metaFont="message" size="11"/>
@@ -232,7 +224,7 @@ DQ
                                             </textFieldCell>
                                         </textField>
                                         <textField focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m0b-3R-CyB">
-                                            <rect key="frame" x="238" y="368" width="354" height="17"/>
+                                            <rect key="frame" x="238" y="354" width="354" height="17"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="Cartridge" id="GKO-Q9-a3a">
                                                 <font key="font" metaFont="systemBold"/>
@@ -240,8 +232,20 @@ DQ
                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
                                         </textField>
+                                        <popUpButton fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ybE-C9-Edd" userLabel="System">
+                                            <rect key="frame" x="229" y="118" width="361" height="20"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
+                                            <popUpButtonCell key="cell" type="bevel" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" inset="2" arrowPosition="arrowAtCenter" preferredEdge="minX" id="kkv-wy-RTo" userLabel="System">
+                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                <font key="font" metaFont="menu"/>
+                                                <menu key="menu" id="vez-Mb-UAZ"/>
+                                            </popUpButtonCell>
+                                            <connections>
+                                                <action selector="cartSetTypeAction:" target="-2" id="Dxe-rl-h5e"/>
+                                            </connections>
+                                        </popUpButton>
                                         <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wF6-vA-6xk">
-                                            <rect key="frame" x="9" y="99" width="20.5" height="28"/>
+                                            <rect key="frame" x="240" y="271" width="20.5" height="28"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                             <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" image="NSTouchBarDeleteTemplate" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" refusesFirstResponder="YES" state="on" imageScaling="proportionallyUpOrDown" inset="2" id="uI4-ym-kRa">
                                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -251,18 +255,6 @@ DQ
                                                 <action selector="cartDeleteAction:" target="-2" id="JP3-Ps-6JR"/>
                                             </connections>
                                         </button>
-                                        <popUpButton fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ybE-C9-Edd" userLabel="System">
-                                            <rect key="frame" x="237" y="128" width="217" height="25"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
-                                            <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="border" inset="2" arrowPosition="arrowAtCenter" preferredEdge="maxY" id="kkv-wy-RTo" userLabel="System">
-                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                                <font key="font" metaFont="menu"/>
-                                                <menu key="menu" id="vez-Mb-UAZ"/>
-                                            </popUpButtonCell>
-                                            <connections>
-                                                <action selector="cartSetTypeAction:" target="-2" id="Dxe-rl-h5e"/>
-                                            </connections>
-                                        </popUpButton>
                                     </subviews>
                                 </view>
                             </tabViewItem>
